kubernetes/main/apps/network/traefik/internal/dashboard/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-http
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: web
      namespace: network
  hostnames:
    - traefik.home.mordex.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
# TODO: fix
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-https
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      namespace: network
  hostnames:
    - traefik.home.mordex.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: api@internal
          group: traefik.io
          kind: TraefikService
          port: 9000
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: traefik.io
      #       kind: Middleware
      #       name: traefik-internal-dashboard-basicauth
